# hexagon

./: Board.cpp  Board.h  CMakeLists.txt  GUI.cpp  GUI.h  Game.cpp  Game.h  HexCell.cpp  HexCell.h  main.cpp
Textures/pixil_backups/: blue_hexagon_range1.pixil  blue_hexagon_range2.pixil  empty_hexagon_range1.pixil  empty_hexagon_range2.pixil  red_hexagon_range2.pixil
